--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.4.2",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "autoprefixer": "10.4.15",
+    "babel-plugin-macros": "^3.1.0",
     "bootstrap": "^5.3.2",
     "eslint": "8.49.0",
     "eslint-config-next": "13.5.1",
